--- a/app/src/main/res/layout/tab2vesti.xml
+++ b/app/src/main/res/layout/tab2vesti.xml
@@ -2,13 +2,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:animateLayoutChanges="true">
 
     <Button
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="top|center"
+        android:layout_gravity="top|right"
         android:paddingTop="10dp"
         android:text="TEST DODAJ"
         android:textAlignment="center"/>
@@ -31,13 +32,15 @@
         android:layout_marginBottom="70dp"
         android:scaleType="center"
         app:fabSize="normal"
-        app:srcCompat="@android:drawable/ic_menu_delete" />
+        app:srcCompat="@android:drawable/ic_menu_delete"
+        android:layout_marginEnd="20dp" />
 
     <TextView
         android:id="@+id/emptyVesti"
         android:padding="20dp"
+        android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="" />
+        android:text="@string/empty_vesti" />
 
 </android.support.design.widget.CoordinatorLayout>
