--- a/app/src/main/res/layout/tab2vesti.xml
+++ b/app/src/main/res/layout/tab2vesti.xml
@@ -5,18 +5,18 @@
     android:orientation="vertical"
     android:animateLayoutChanges="true">
 
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="top|right"
-        android:paddingTop="10dp"
-        android:text="TEST DODAJ"
-        android:textAlignment="center"/>
+    <!--<Button-->
+        <!--android:id="@+id/button2"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_gravity="top|right"-->
+        <!--android:paddingTop="10dp"-->
+        <!--android:text="TEST DODAJ"-->
+        <!--android:textAlignment="center"/>-->
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
-        android:paddingTop="65dp"
+        android:paddingTop="27dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layoutAnimation="@anim/layout_animation_slide_from_bottom"/>
