--- a/app/src/main/res/layout/tab3predmeti.xml
+++ b/app/src/main/res/layout/tab3predmeti.xml
@@ -8,9 +8,15 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity">
 
-    <!--<SearchView android:id="@+id/search" android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content" android:layout_alignParentLeft="true"-->
-        <!--android:layout_alignParentTop="true" android:iconifiedByDefault="false" />-->
+    <SearchView
+        android:id="@+id/search"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_toLeftOf="@+id/saveButton"
+        android:layout_toStartOf="@+id/saveButton"
+        android:iconifiedByDefault="false" />
 
     <ExpandableListView
         android:id="@+id/lvExp"
@@ -19,7 +25,7 @@
         android:layout_marginTop="18dp"
         android:layout_below="@+id/saveButton"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"></ExpandableListView>
+        android:layout_alignParentStart="true"/>
 
     <Button
         android:id="@+id/saveButton"
@@ -30,5 +36,15 @@
         android:layout_alignParentTop="true"
         android:textColor="@color/primaryText"
         android:text="Sačuvaj" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/search"
+        android:paddingTop="50dp"
+        android:layout_centerHorizontal="true"
+        android:layout_gravity="center" />
 
 </RelativeLayout>
