--- a/app/src/main/res/layout/nav_drawer_item.xml
+++ b/app/src/main/res/layout/nav_drawer_item.xml
@@ -16,7 +16,7 @@
         android:src="@drawable/ic_home"/>
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="240dp"
         android:layout_height="wrap_content"
         android:paddingLeft="12dp"
         android:paddingTop="4dp"
