--- a/app/src/main/res/layout/tab1istorija.xml
+++ b/app/src/main/res/layout/tab1istorija.xml
@@ -35,8 +35,10 @@
         android:id="@+id/emptyVesti1"
         android:padding="20dp"
         android:layout_gravity="center"
+        android:layout_marginBottom="55dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         android:text="@string/empty_vesti" />
 
 
