--- a/app/src/main/res/layout/istorija_list_item.xml
+++ b/app/src/main/res/layout/istorija_list_item.xml
@@ -10,7 +10,7 @@
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view"
         android:layout_gravity="center"
-        android:layout_width="335dp"
+        android:layout_width="match_parent"
         android:layout_height="100dp"
         card_view:cardCornerRadius="0dp">
 
@@ -21,7 +21,7 @@
         android:paddingTop="2dp"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
-        android:layout_width="335dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     <TextView
         android:id="@+id/textViewIstorijaData"
@@ -29,7 +29,7 @@
         android:paddingTop="35dp"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
-        android:layout_width="335dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     </android.support.v7.widget.CardView>
 
