--- a/app/src/main/res/layout/vesti_list_item.xml
+++ b/app/src/main/res/layout/vesti_list_item.xml
@@ -9,9 +9,11 @@
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view"
         android:layout_gravity="center"
-        android:layout_width="335dp"
+        android:layout_width="match_parent"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="0dp"
         android:layout_height="75dp"
-        card_view:cardCornerRadius="0dp">
+        card_view:cardCornerRadius="3dp">
 
         <TextView
             android:id="@+id/textViewTitle"
@@ -20,12 +22,12 @@
             android:paddingTop="2dp"
             android:paddingLeft="20dp"
             android:paddingRight="20dp"
-            android:layout_width="335dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/textViewData"
-            android:layout_width="335dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="35dp"
             android:paddingLeft="20dp"
