--- a/app/src/main/res/layout/exp_list_item.xml
+++ b/app/src/main/res/layout/exp_list_item.xml
@@ -13,6 +13,7 @@
     <CheckBox
         android:id="@+id/checkBoxListItem"
         android:text=""
+        android:textSize="14sp"
         android:textColor="@color/primaryText"
         android:focusable="false"
         android:focusableInTouchMode="false"
