--- a/app/src/main/res/layout/nav_drawer_item.xml
+++ b/app/src/main/res/layout/nav_drawer_item.xml
@@ -22,6 +22,7 @@
         android:paddingTop="4dp"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Medium Text"
+        android:textColor="@color/primaryText"
         android:id="@+id/rowText" />
 
 </LinearLayout>
