--- a/app/src/main/res/layout/tab1istorija.xml
+++ b/app/src/main/res/layout/tab1istorija.xml
@@ -7,14 +7,14 @@
     android:orientation="vertical"
     android:animateLayoutChanges="true">
 
-    <!--<Button-->
-        <!--android:id="@+id/buttonTest"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_gravity="top|right"-->
-        <!--android:paddingTop="10dp"-->
-        <!--android:text="TEST DODAJ"-->
-        <!--android:textAlignment="center"/>-->
+    <Button
+        android:id="@+id/buttonTest"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top|right"
+        android:paddingTop="10dp"
+        android:text="TEST DODAJ"
+        android:textAlignment="center"/>
     <!--<Button-->
         <!--android:id="@+id/buttonTestDelete"-->
         <!--android:layout_width="wrap_content"-->
