--- a/app/src/main/res/layout/tab3predmeti.xml
+++ b/app/src/main/res/layout/tab3predmeti.xml
@@ -22,7 +22,8 @@
     <ExpandableListView
         android:id="@+id/lvExp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="35dp"
         android:layout_marginTop="18dp"
         android:layout_below="@+id/saveButton"
         android:layout_alignParentLeft="true"
