--- a/app/src/main/res/layout/vesti_list_item.xml
+++ b/app/src/main/res/layout/vesti_list_item.xml
@@ -1,6 +1,6 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="80dp"
+    android:layout_height="105dp"
     android:layout_marginLeft="5dp"
     android:layout_marginRight="5dp"
     android:gravity="center_vertical">
@@ -12,28 +12,36 @@
         android:layout_width="match_parent"
         android:layout_marginLeft="0dp"
         android:layout_marginRight="0dp"
-        android:layout_height="75dp"
-        card_view:cardCornerRadius="3dp">
+        android:layout_height="100dp"
+        card_view:cardCornerRadius="0dp">
 
         <TextView
             android:id="@+id/textViewTitle"
-            android:text=""
-            android:textStyle="bold"
-            android:paddingTop="2dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:paddingLeft="20dp"
             android:paddingRight="20dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:paddingTop="2dp"
+            android:text="asdfasdasddsadasdasdasdasdsadasdasdasd"
+            android:textStyle="bold" />
+
+        <!--<Button-->
+            <!--android:id="@+id/delVestiButton"-->
+            <!--android:layout_width="55dp"-->
+            <!--android:layout_height="55dp"-->
+            <!--android:layout_gravity="center|right"-->
+            <!--android:background="@android:drawable/ic_menu_delete"-->
+            <!--android:backgroundTint="@android:color/holo_red_light" />-->
 
         <TextView
             android:id="@+id/textViewData"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingTop="35dp"
             android:paddingLeft="20dp"
             android:paddingRight="20dp"
+            android:paddingTop="35dp"
             android:text="@string/element_text" />
     </android.support.v7.widget.CardView>
 
 
-</FrameLayout>
+</RelativeLayout>
