--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#2196f3  </color>
+    <color name="colorPrimaryDark">#0069c0</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="primaryText">#455A64</color>
+    <color name="primaryText">#3D484C</color>
 </resources>
+
+<!--<color name="colorPrimary">#2196f3  </color>-->
+<!--<color name="colorPrimaryDark">#0069c0</color>-->
