--- a/app/src/main/res/layout/tab3predmeti.xml
+++ b/app/src/main/res/layout/tab3predmeti.xml
@@ -14,6 +14,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
+        android:focusable="false"
+        android:focusableInTouchMode="true"
         android:layout_alignParentTop="true"
         android:layout_toLeftOf="@+id/saveButton"
         android:layout_toStartOf="@+id/saveButton"
