--- a/app/src/main/res/layout/istorija_list_item.xml
+++ b/app/src/main/res/layout/istorija_list_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="105dp"
+    android:layout_height="110dp"
     android:layout_marginLeft="5dp"
     android:layout_marginRight="5dp"
     android:gravity="center_vertical">
@@ -11,26 +11,29 @@
         android:id="@+id/card_view"
         android:layout_gravity="center"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="105dp"
         card_view:cardCornerRadius="0dp">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <TextView
+                android:id="@+id/textViewIstorijaTitle"
+                android:textStyle="bold"
+                android:paddingTop="2dp"
+                android:paddingLeft="10dp"
+                android:layout_width="match_parent"
+                android:gravity="center_vertical"
+                android:layout_height="50dp" />
+            <TextView
+                android:id="@+id/textViewIstorijaData"
+                android:layout_below="@+id/textViewIstorijaTitle"
+                android:gravity="center_vertical"
+                android:paddingLeft="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="50dp" />
+        </RelativeLayout>
 
-    <TextView
-        android:id="@+id/textViewIstorijaTitle"
-        android:text=""
-        android:textStyle="bold"
-        android:paddingTop="2dp"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <TextView
-        android:id="@+id/textViewIstorijaData"
-        android:text=""
-        android:paddingTop="35dp"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+
 
     </android.support.v7.widget.CardView>
 
