--- a/app/src/main/res/layout/vesti_list_item.xml
+++ b/app/src/main/res/layout/vesti_list_item.xml
@@ -14,33 +14,47 @@
         android:layout_marginRight="0dp"
         android:layout_height="100dp"
         card_view:cardCornerRadius="0dp">
-
-        <TextView
-            android:id="@+id/textViewTitle"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp"
-            android:paddingTop="2dp"
-            android:text="asdfasdasddsadasdasdasdasdsadasdasdasd"
-            android:textStyle="bold" />
+            android:layout_height="match_parent">
+            <TextView
+                android:id="@+id/textViewTitle"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_toLeftOf="@id/delVestiButton"
+                android:gravity="center_vertical"
+                android:paddingLeft="10dp"
+                android:paddingTop="2dp"
+                android:textStyle="bold" />
 
-        <!--<Button-->
-            <!--android:id="@+id/delVestiButton"-->
-            <!--android:layout_width="55dp"-->
-            <!--android:layout_height="55dp"-->
-            <!--android:layout_gravity="center|right"-->
-            <!--android:background="@android:drawable/ic_menu_delete"-->
-            <!--android:backgroundTint="@android:color/holo_red_light" />-->
+            <ImageButton
+                android:id="@+id/delVestiButton"
+                android:layout_width="50dp"
+                android:layout_height="match_parent"
+                android:layout_alignParentEnd="true"
+                android:paddingLeft="7dp"
+                android:layout_marginRight="5dp"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:adjustViewBounds="true"
+                android:scaleType="fitCenter"
+                android:background="@android:color/transparent"
+                android:src="@drawable/deletevesti"/>
 
-        <TextView
-            android:id="@+id/textViewData"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp"
-            android:paddingTop="35dp"
-            android:text="@string/element_text" />
+
+            <TextView
+                android:id="@+id/textViewData"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:layout_alignParentLeft="true"
+                android:gravity="center_vertical"
+                android:layout_below="@+id/textViewTitle"
+                android:layout_toLeftOf="@id/delVestiButton"
+                android:paddingLeft="10dp"
+                android:text="@string/element_text" />
+        </RelativeLayout>
+
+
     </android.support.v7.widget.CardView>
 
 
