--- a/app/src/main/res/layout/vesti_list_item.xml
+++ b/app/src/main/res/layout/vesti_list_item.xml
@@ -1,8 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="105dp"
-    android:layout_marginLeft="5dp"
-    android:layout_marginRight="5dp"
+    android:layout_height="110dp"
     android:gravity="center_vertical">
 
     <android.support.v7.widget.CardView
@@ -10,9 +8,8 @@
         android:id="@+id/card_view"
         android:layout_gravity="center"
         android:layout_width="match_parent"
-        android:layout_marginLeft="0dp"
-        android:layout_marginRight="0dp"
-        android:layout_height="100dp"
+        android:layout_margin="8dp"
+        android:layout_height="105dp"
         card_view:cardCornerRadius="0dp">
         <RelativeLayout
             android:layout_width="match_parent"
@@ -23,7 +20,7 @@
                 android:layout_height="50dp"
                 android:layout_toLeftOf="@id/delVestiButton"
                 android:gravity="center_vertical"
-                android:paddingLeft="10dp"
+                android:paddingLeft="8dp"
                 android:paddingTop="2dp"
                 android:textStyle="bold" />
 
@@ -50,7 +47,7 @@
                 android:gravity="center_vertical"
                 android:layout_below="@+id/textViewTitle"
                 android:layout_toLeftOf="@id/delVestiButton"
-                android:paddingLeft="10dp"
+                android:paddingLeft="8dp"
                 android:text="@string/element_text" />
         </RelativeLayout>
 
