--- a/app/src/main/res/layout/tab1istorija.xml
+++ b/app/src/main/res/layout/tab1istorija.xml
@@ -26,9 +26,9 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/istorijaRecyclerView"
-        android:paddingTop="16dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="4dp"
         android:layoutAnimation="@anim/layout_animation_slide_from_bottom"/>
 
     <TextView
