--- a/app/src/main/res/layout/istorija_list_item.xml
+++ b/app/src/main/res/layout/istorija_list_item.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="110dp"
-    android:layout_marginLeft="5dp"
-    android:layout_marginRight="5dp"
+    android:layout_height="120dp"
     android:gravity="center_vertical">
 
     <android.support.v7.widget.CardView
@@ -11,19 +9,23 @@
         android:id="@+id/card_view"
         android:layout_gravity="center"
         android:layout_width="match_parent"
-        android:layout_height="105dp"
+        android:layout_height="match_parent"
+        android:layout_marginTop="4dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="4dp"
         card_view:cardCornerRadius="0dp">
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <TextView
                 android:id="@+id/textViewIstorijaTitle"
-                android:textStyle="bold"
-                android:paddingTop="2dp"
-                android:paddingLeft="8dp"
                 android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:textStyle="bold"
+                android:paddingLeft="8dp"
                 android:gravity="center_vertical"
-                android:layout_height="50dp" />
+                 />
             <TextView
                 android:id="@+id/textViewIstorijaData"
                 android:layout_below="@+id/textViewIstorijaTitle"
@@ -33,9 +35,7 @@
                 android:layout_height="50dp" />
         </RelativeLayout>
 
-
-
     </android.support.v7.widget.CardView>
 
 
-</FrameLayout>
+</LinearLayout>
