--- a/app/src/main/res/layout/nav_drawer_header.xml
+++ b/app/src/main/res/layout/nav_drawer_header.xml
@@ -28,7 +28,7 @@
             android:layout_alignParentBottom="true"
             android:layout_alignStart="@+id/email"
             android:layout_marginBottom="14dp"
-            android:text="Notifikacije Mašinski fakultet"
+            android:text="@string/drawer_header_1"
             android:textColor="#ffffff"
             android:textSize="19sp"
             android:textStyle="bold" />
@@ -39,21 +39,20 @@
             android:layout_height="wrap_content"
             android:textColor="#ffffff"
             android:layout_alignParentBottom="true"
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="16dp"
             android:layout_marginBottom="45dp"
             android:textSize="16sp"
-            android:text="Notifikacije o novim vestima"
+            android:text="@string/drawer_header_2"
             android:textStyle="normal"/>
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:layout_alignParentBottom="true"
-            android:layout_marginLeft="14dp"
+            android:layout_marginLeft="10dp"
             android:layout_marginBottom="70dp"
             android:src="@mipmap/ic_logo_header"
-            android:id="@+id/circleView"
-            android:layout_marginStart="14dp" />
+            android:id="@+id/circleView" />
 
     </RelativeLayout>
 
