--- a/app/src/main/res/layout/vesti_list_item.xml
+++ b/app/src/main/res/layout/vesti_list_item.xml
@@ -1,16 +1,19 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="110dp"
+    android:layout_height="120dp"
     android:gravity="center_vertical">
 
     <android.support.v7.widget.CardView
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view"
+        android:layout_height="match_parent"
         android:layout_gravity="center"
         android:layout_width="match_parent"
-        android:layout_margin="8dp"
-        android:layout_height="105dp"
-        card_view:cardCornerRadius="0dp">
+        android:layout_marginTop="4dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="4dp"
+        card_view:cardCornerRadius="2dp">
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -21,7 +24,6 @@
                 android:layout_toLeftOf="@id/delVestiButton"
                 android:gravity="center_vertical"
                 android:paddingLeft="8dp"
-                android:paddingTop="2dp"
                 android:textStyle="bold" />
 
             <ImageButton
@@ -51,8 +53,7 @@
                 android:text="@string/element_text" />
         </RelativeLayout>
 
-
     </android.support.v7.widget.CardView>
 
 
-</RelativeLayout>
+</LinearLayout>
