--- a/app/src/main/res/layout/nav_drawer_header.xml
+++ b/app/src/main/res/layout/nav_drawer_header.xml
@@ -4,13 +4,13 @@
     android:layout_height="190dp"
     android:orientation="vertical"
     android:weightSum="1"
-    android:background="@drawable/background_poly">
+    android:background="@drawable/background_faks">
 
     <!--<ImageView-->
         <!--android:layout_width="match_parent"-->
         <!--android:layout_height="match_parent"-->
         <!--android:scaleType="centerCrop"-->
-        <!--android:src="@drawable/background_poly"/>-->
+        <!--android:src="@drawable/background_faks"/>-->
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -30,6 +30,10 @@
             android:layout_marginBottom="14dp"
             android:text="@string/drawer_header_1"
             android:textColor="#ffffff"
+            android:shadowColor="#000000"
+            android:shadowDx="2"
+            android:shadowDy="2"
+            android:shadowRadius="2"
             android:textSize="19sp"
             android:textStyle="bold" />
 
@@ -42,6 +46,10 @@
             android:layout_marginLeft="16dp"
             android:layout_marginBottom="45dp"
             android:textSize="16sp"
+            android:shadowColor="#000000"
+            android:shadowDx="2"
+            android:shadowDy="2"
+            android:shadowRadius="2"
             android:text="@string/drawer_header_2"
             android:textStyle="normal"/>
 
