--- a/app/src/main/res/layout/vesti_list_item.xml
+++ b/app/src/main/res/layout/vesti_list_item.xml
@@ -17,14 +17,41 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-            <TextView
-                android:id="@+id/textViewTitle"
+            <RelativeLayout
+                android:id="@+id/relativeLayoutVesti"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:layout_toLeftOf="@id/delVestiButton"
-                android:gravity="center_vertical"
-                android:paddingLeft="8dp"
-                android:textStyle="bold" />
+                android:layout_toLeftOf="@id/delVestiButton">
+                <TextView
+                    android:id="@+id/textViewTitle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:gravity="center_vertical"
+                    android:paddingLeft="8dp"
+                    android:textColor="@color/primaryText"
+                    android:textStyle="bold" />
+
+                <View
+                    android:id="@+id/lineView"
+                    android:layout_width="match_parent"
+                    android:layout_height="0.5dp"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginRight="24dp"
+                    android:layout_marginTop="4dp"
+                    android:layout_below="@id/textViewTitle"
+                    android:background="#403D484C" />
+                <View
+                    android:id="@+id/lineView1"
+                    android:layout_width="match_parent"
+                    android:layout_height="0.5dp"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginTop="4.5dp"
+                    android:layout_marginRight="24dp"
+                    android:layout_below="@+id/textViewTitle"
+                    android:background="#7A3D484C" />
+
+            </RelativeLayout>
 
             <ImageButton
                 android:id="@+id/delVestiButton"
@@ -40,15 +67,15 @@
                 android:background="@android:color/transparent"
                 android:src="@drawable/deletevesti"/>
 
-
             <TextView
                 android:id="@+id/textViewData"
                 android:layout_width="wrap_content"
+                android:textColor="@color/primaryText"
                 android:layout_height="50dp"
                 android:layout_alignParentLeft="true"
                 android:gravity="center_vertical"
-                android:layout_below="@+id/textViewTitle"
                 android:layout_toLeftOf="@id/delVestiButton"
+                android:layout_below="@+id/relativeLayoutVesti"
                 android:paddingLeft="8dp"
                 android:text="@string/element_text" />
         </RelativeLayout>
