--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3f51b5  </color>
-    <color name="colorPrimaryDark">#002984</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#263238</color>
+    <color name="colorPrimaryDark">#000a12</color>
+    <color name="colorAccent">#fb8c00</color>
     <color name="primaryText">#3D484C</color>
+    <color name="secondaryText">#ffffff</color>
+
 </resources>
 
 <!--<color name="colorPrimary">#2196f3  </color>-->
