--- a/app/src/main/res/layout/tab1istorija.xml
+++ b/app/src/main/res/layout/tab1istorija.xml
@@ -39,7 +39,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone"
-        android:text="@string/empty_vesti" />
+        android:text="@string/empty_istorija" />
 
 
 </android.support.design.widget.CoordinatorLayout>
