--- a/app/src/main/res/layout/tab1istorija.xml
+++ b/app/src/main/res/layout/tab1istorija.xml
@@ -1,28 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:animateLayoutChanges="true">
-
-    <!--<Button-->
-        <!--android:id="@+id/buttonTest"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_gravity="top|right"-->
-        <!--android:paddingTop="10dp"-->
-        <!--android:text="TEST DODAJ"-->
-        <!--android:textAlignment="center"/>-->
-    <!--<Button-->
-        <!--android:id="@+id/buttonTestDelete"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_gravity="top"-->
-        <!--android:paddingTop="10dp"-->
-        <!--android:text="DELETE"-->
-        <!--android:textAlignment="center"/>-->
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/istorijaRecyclerView"
