--- a/app/src/main/res/layout/content_feedback.xml
+++ b/app/src/main/res/layout/content_feedback.xml
@@ -2,23 +2,24 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/relativeLayoutFeedback"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.vies.notifikacijevesti.FeedbackActivity"
-    android:animateLayoutChanges="true"
+    android:clickable="true"
     android:focusable="true"
     android:focusableInTouchMode="true"
+    android:animateLayoutChanges="true"
     tools:showIn="@layout/activity_feedback">
 
     <com.jaredrummler.materialspinner.MaterialSpinner
         android:id="@+id/categories_spinner"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="16sp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
-
         android:textColor="@color/primaryText"/>
 
     <android.support.v7.widget.AppCompatRatingBar
